amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.report
ModelId: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.graphql
Profile: GraphQL
Conforms: false
Number of results: 2

Level: Violation

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-argument
  Message: Cannot exist two or more arguments with name 'text'
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.graphql#/declares/MyDirective/shape/default-node/property/property/text
  Property: 
  Range: [(9,23)-(9,35)]
  Location: 

- Constraint: http://a.ml/vocabularies/amf/parser#duplicated-argument
  Message: Cannot exist two or more arguments with name 'text'
  Severity: Violation
  Target: file://amf-graphql-test-sets/shared/src/test/resources/graphql/tck/apis/invalid/duplicate-directive-argument.api.graphql#/declares/MyDirective/shape/default-node/property/property/text_1
  Property: 
  Range: [(9,37)-(9,49)]
  Location: 
